Fixed a litle bit mobile view and particles spreading, hovering on mobile disabled, zoom disabled, added login/logout button state, saving information to cookies about authentication, added the base of isAuthenticated to check authentication on server side

--- a/styles/_index.scss
+++ b/styles/_index.scss
@@ -42,15 +42,15 @@
 	z-index: 1;
 	perspective: 1000px;
 	color: white;
-	width: 400px;
+	// width: 400px;
 	position: relative;
 
 	&-content {
 		z-index: 1;
 		position: absolute;
 		bottom: 0px;
-		width: 360px;
-		left: 6%;
+		// width: 360px;
+		// left: 6%;
 
 		&-intro {
 			font-size: 17px;
@@ -90,10 +90,10 @@
 
 @media (max-width: 991px) {
 	.display-section {
-		width: 341px;
+		// width: 341px;
 
 		&-content {
-			width: 341px;
+			// width: 341px;
 		}
 	}
 
@@ -105,8 +105,8 @@
 #particles {
 	position: absolute;
 	width: 100%;
-	height: 50%;
-	z-index: 1;
+	height: 200vmax;
+	z-index: 0;
 }
 
 .shadowed {
@@ -114,4 +114,11 @@
 	filter: url(#drop-shadow);
 	-ms-filter: "progid:DXImageTransform.Microsoft.Dropshadow(OffX=12, OffY=12, Color='#0d4e9e')";
 	filter: "progid:DXImageTransform.Microsoft.Dropshadow(OffX=12, OffY=12, Color='#0d4e9e')";
+}
+
+@media (hover: hover) and (pointer: fine) {
+	#particles {
+		z-index: 1;
+		height: 25vmax;
+	}
 }
